syntax = "proto3";

import "presence_check.proto";

package kotlinx.rpc.protobuf.test;

message Repeated {
  repeated fixed32 listFixed32 = 1 [packed = false];
  repeated fixed32 listFixed32Packed = 2 [packed = true];
  repeated int32 listInt32 = 3 [packed = false];
  repeated int32 listInt32Packed = 4 [packed = true];
  repeated string listString = 5;
  repeated Other listMessage = 6;

  message Other {
    int32 a = 1;
  }
}

message RepeatedWithRequired {
  repeated PresenceCheck msgList = 1;
}
